# lena.ai

./: README.md  pyproject.toml
docs/: .$system_design.drawio.bkp  .$system_design.drawio.dtmp  environment_packages.md  system_design.drawio
src/backend/: az_shell.py  config.py  main.py  pyproject.toml
src/backend/.agent_cwd/admin@MngEnvMCAP049172.onmicrosoft.com/: seattle_temperature.csv
src/backend/agents/: missing_info_agent.py  prompt.py  state.py  task_execution_overseer.py  task_param_collector_agent.py  task_planner_agent.py  task_runner_agent.py  utils.py  value_resolver_agent.py  workflow.py
src/backend/agents/tools/: __bak_az_cli_tool.py  __bak_code_generator.py  __bak_tools_manager.py  __init__.py  az_cli.py  az_shell.py  bash.py  code.py  code_executor.py  code_generator.py  deep_research.py  tool.py  tools_manager.py
src/backend/agents/tools/file_system/: smol_read_file.py
src/backend/tools/: az_cli_tool.py  az_doc_tool.py  az_shell.py  azcli_cmd_tool.py  azcli_tool.py  azure_mcp.py  azure_mcp_server.py  code.py  deep_research.py  langchain_code.py  smol_list_files_tool.py  smol_read_file.py  smol_write_file.py  tools_manager.py  util_az_mcp.py  web_search.py
src/evaluation/: build_app_and_deploy.yaml  data_analysis_prompt.yaml  data_etl.yaml  evaluation_prompts.md  no_such_feature_prompt.yaml  resource_search_prompt.yaml  sentinel_threat_hunting_prompt.yaml
src/frontend/: example.js
