[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lena-ai"
version = "0.1.0"
description = "AI-powered Azure CLI tool assistant"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Weixian Zhang"}
]
keywords = ["ai", "azure", "cli", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "agent-framework>=1.0.0b251216",
    "azure-identity>=1.25.1",
    "dotenv-python>=0.0.1",
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.2",
    "langgraph>=1.0.4",
    "mcp>=1.24.0",
    "pexpect>=4.9.0",
]



# [tool.setuptools]
# package-dir = {"" = "/"}

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
